tests/ui/imports/ambiguous-17.stderr
warning: ambiguous glob re-exports
  --> $DIR/ambiguous-17.rs:3:9
   |
LL | pub use evp::*;
   |         ^^^^^^ the name `id` in the value namespace is first re-exported here
LL | pub use handwritten::*;
   |         -------------- but the name `id` in the value namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

error: `id` is ambiguous
  --> $DIR/ambiguous-17.rs:25:5
   |
LL |     id();
   |     ^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `id` could refer to the function imported here
  --> $DIR/ambiguous-17.rs:3:9
   |
LL | pub use evp::*;
   |         ^^^^^^
   = help: consider adding an explicit import of `id` to disambiguate
note: `id` could also refer to the function imported here
  --> $DIR/ambiguous-17.rs:4:9
   |
LL | pub use handwritten::*;
   |         ^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `id` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

Future incompatibility report: Future breakage diagnostic:
error: `id` is ambiguous
  --> $DIR/ambiguous-17.rs:25:5
   |
LL |     id();
   |     ^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `id` could refer to the function imported here
  --> $DIR/ambiguous-17.rs:3:9
   |
LL | pub use evp::*;
   |         ^^^^^^
   = help: consider adding an explicit import of `id` to disambiguate
note: `id` could also refer to the function imported here
  --> $DIR/ambiguous-17.rs:4:9
   |
LL | pub use handwritten::*;
   |         ^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `id` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

